--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "postcss-easy-import": "^3.0.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-spring": "^8.0.19",
+    "react-trend": "^1.2.4",
     "tailwindcss": "^0.7.4"
   }
 }
